DigicielFull/force-app/main/default/objects/amc__Time_Log__c/amc__Time_Log__c.object-meta.xml
<CustomObject>
    <description>Enables project team members to log time against Actions</description>
    <label>Time Log</label>
    <nameField>
        <displayFormat>TLN-{00000000}</displayFormat>
        <label>Time Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>