DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <inlineHelpText>Select the Action this Time Log relates to</inlineHelpText>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Time Logs</relationshipLabel>
    <relationshipName>Time_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>