DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Action_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Action_Name__c</fullName>
    <formula>amc__Action__r.amc__Action_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field: References the Action Name from the Action this Time Log relates to</inlineHelpText>
    <label>Action Name</label>
    <type>Text</type>
</CustomField>