DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Approval_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>amc__Approval_Date_Stamp__c</fullName>
    <description>Updated by a trigger, the first date the record was marked as approved.</description>
    <label>Approval Date Stamp</label>
    <type>Date</type>
</CustomField>