DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Approval_Status__c</fullName>
    <inlineHelpText>Identifies the Approval Status of this Time Log based on the Role Manager Approval Status and Project Owner Approval Status values</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>