DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Billable_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Billable_Hourly_Rate__c</fullName>
    <inlineHelpText>Identifies the Billable Hourly Rate used to calculate the billing financials of this Time Log</inlineHelpText>
    <label>Billable Hourly Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>