DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Billable_Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>amc__Billable_Hours_Completed__c</fullName>
    <formula>IF(!amc__Non_Billable_Indicator__c , amc__Hours_Completed__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Hours Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>