DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Case__c.field-meta.xml
<CustomField>
    <fullName>amc__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Case this Time Log relates to</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Logs</relationshipLabel>
    <relationshipName>Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>