DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>amc__Checklist_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Checklist Item this Time Log relates to</inlineHelpText>
    <label>Checklist Item</label>
    <referenceTo>amc__Checklist_Item__c</referenceTo>
    <relationshipLabel>Time Logs</relationshipLabel>
    <relationshipName>Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>