DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost__c</fullName>
    <inlineHelpText>This field is used to track any monetary expenses relating to the action. (Previously Labelled Cost)</inlineHelpText>
    <label>Material Cost (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>