DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Date__c</fullName>
    <inlineHelpText>date the work was completed</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>