DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Exclude_from_Billable_Capacity__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Billable_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if this Time Log should be excluded from Billable Capacity</description>
    <inlineHelpText>Identifies if this Time Log should be excluded from Billable Capacity</inlineHelpText>
    <label>Exclude from Billable Capacity</label>
    <type>Checkbox</type>
</CustomField>