DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Hours_Completed_Value_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Value_Billable__c</fullName>
    <inlineHelpText>Summarises the Hours Completed Value of the Time Log based on the Billable Hourly Rate</inlineHelpText>
    <label>Hours Completed Value (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>