DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Invoiced__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the Time Log has been included in a Billing Event</inlineHelpText>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>