DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Issue__c.field-meta.xml
<CustomField>
    <fullName>amc__Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Issue this Time Log relates to</inlineHelpText>
    <label>Issue</label>
    <referenceTo>amc__Issue__c</referenceTo>
    <relationshipLabel>Time Logs</relationshipLabel>
    <relationshipName>Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>