DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Non_Billable_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Non_Billable_Indicator__c</fullName>
    <formula>IF(amc__Non_Billable__c = TRUE, TRUE, amc__Action__r.amc__Non_Billable_Indicator__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if this Time Log is classified as Non Billable. If the Time Log &apos;Non Billable&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Action &apos;Non Billable&apos; Field.</inlineHelpText>
    <label>Non Billable Indicator</label>
    <type>Checkbox</type>
</CustomField>