DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Non_Billable_Tracker__c.field-meta.xml
<CustomField>
    <fullName>amc__Non_Billable_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tracks the Non Billable Status of the Time Log taking into account the manual entry in the Non Billable field of this Time Log and any changes that may have occurred on the Non Billable Indicator field of the Parent Action</inlineHelpText>
    <label>Non Billable Tracker</label>
    <type>Checkbox</type>
</CustomField>