DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Notes__c</fullName>
    <inlineHelpText>Enter the details of what progress has been made on the Action during this Time Log</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>