DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Overtime__c.field-meta.xml
<CustomField>
    <fullName>amc__Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if the time being submitted is eligible to be calculated as overtime (subject to the Project being eligible for overtime)</inlineHelpText>
    <label>Overtime</label>
    <type>Checkbox</type>
</CustomField>