DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Project_Id__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Id__c</fullName>
    <formula>CASESAFEID(amc__Action__r.amc__Milestone__r.amc__Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by trigger(s) to update Non_Billable_Tracker__c</inlineHelpText>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>