DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Project_Owner_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner_Approval_Status__c</fullName>
    <inlineHelpText>Identifies the Approval Status of this Time Log from the Project Owner</inlineHelpText>
    <label>Project Owner Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>