DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Project_Owner_Approver__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Role record for the person that is Project Owner responsible for approving Time Logs for this project</inlineHelpText>
    <label>Project Owner Approver</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Time Logs (Project Owner Approver)</relationshipLabel>
    <relationshipName>Time_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>