DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Project_Owner_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner_Rejection_Comments__c</fullName>
    <inlineHelpText>Identifies the reason the Project Owner rejected the Time Log</inlineHelpText>
    <label>Project Owner Rejection Comments</label>
    <type>TextArea</type>
</CustomField>