DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Role_Manager_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Manager_Approval_Required__c</fullName>
    <description>Used by TimeLog trigger, saves query up to Project object.</description>
    <formula>amc__Action__r.amc__Milestone__r.amc__Project__r.amc__Role_Manager_Timesheet_Approval_Reqd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Manager Approval Required</label>
    <type>Checkbox</type>
</CustomField>