DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Role_Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Manager_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Role record for the person that is the Role Manager responsible for approving Time Logs for this person</inlineHelpText>
    <label>Role Manager Approver</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Time Logs (Role Manager Approver)</relationshipLabel>
    <relationshipName>Time_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>