DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Role_Manager_Current_User__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Manager_Current_User__c</fullName>
    <formula>IF(amc__Role_Manager_Approver__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the Current User is the User required to approve this Time Log as the Role Manager</inlineHelpText>
    <label>Role Manager Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>