DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Roll_Up_to_Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Roll_Up_to_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether the Hours Completed and associated financial information should be rolled up to the Action fields.</inlineHelpText>
    <label>Roll Up to Action</label>
    <type>Checkbox</type>
</CustomField>