DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>amc__Skill_Id__c</fullName>
    <description>Used by Mission Control trigger to minimise query use.</description>
    <formula>amc__Action__r.amc__Skill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Id</label>
    <type>Text</type>
</CustomField>