DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Time_Log_Notes_RT__c.field-meta.xml
<CustomField>
    <fullName>amc__Time_Log_Notes_RT__c</fullName>
    <inlineHelpText>Detailed Notes about the Time Log</inlineHelpText>
    <label>Time Log Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>