DigicielFull/force-app/main/default/objects/amc__Time_Log__c/fields/amc__Time_Log_Type__c.field-meta.xml
<CustomField>
    <fullName>amc__Time_Log_Type__c</fullName>
    <description>It is recommended that you add your own values in to this picklist field</description>
    <inlineHelpText>Can be used to identify the type / category of the Time Log</inlineHelpText>
    <label>Time Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>