DigicielFull/force-app/main/default/objects/amc__Time_Log__c/validationRules/amc__Ensure_Role_Manager_Approves.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Role_Manager_Approves</fullName>
    <active>true</active>
    <description>Prevent anyone other than the Role Manager Approver from setting the Role Manager Approval Status field to Approved / Rejected</description>
    <errorConditionFormula>AND(
 $User.Id !=  amc__Role_Manager_Approver__r.amc__User__r.Id,
 OR(ISPICKVAL(amc__Role_Manager_Approval_Status__c, &quot;Approved&quot;), ISPICKVAL(amc__Role_Manager_Approval_Status__c, &quot;Rejected&quot;)),
 ISCHANGED(amc__Role_Manager_Approval_Status__c)
)</errorConditionFormula>
    <errorMessage>Only the specified Role Manager can set the Role Manager Approval Status to Approved or Rejected</errorMessage>
</ValidationRule>