DigicielFull/force-app/main/default/objects/amc__Time_Log__c/validationRules/amc__Prevent_Negative_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Prevent_Negative_Hours</fullName>
    <active>true</active>
    <description>Ensure the Hours Completed field does not contain a negative value</description>
    <errorConditionFormula>amc__Hours_Completed__c &lt; 0</errorConditionFormula>
    <errorMessage>Hours Completed must be 0 or higher</errorMessage>
</ValidationRule>