DigicielFull/force-app/main/default/objects/amc__Time_Log__c/validationRules/amc__Prevent_Time_Log_Being_Associated_To_BEI.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Prevent_Time_Log_Being_Associated_To_BEI</fullName>
    <active>true</active>
    <description>Prevents a Time Log from being related to a Billing Event Item if the Status of the Billing Event is set to Issued</description>
    <errorConditionFormula>AND(ISBLANK(PRIORVALUE(amc__Billing_Event_Item__c)) , NOT(ISBLANK(amc__Billing_Event_Item__c)) , ISPICKVAL(amc__Billing_Event_Item__r.amc__Billing_Event__r.amc__Status__c, &quot;Issued&quot;))</errorConditionFormula>
    <errorMessage>You cannot associate a Time Log to a Billing Event that has already been issued</errorMessage>
</ValidationRule>