DigicielFull/force-app/main/default/objects/amc__Time_Log__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Action__c</columns>
    <columns>amc__Hours_Completed__c</columns>
    <columns>amc__Non_Billable__c</columns>
    <columns>amc__Time_Log_Notes_RT__c</columns>
    <columns>amc__Project_Member__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>amc__Date__c</columns>
    <columns>amc__Project_Id__c</columns>
    <columns>amc__Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>