DigicielFull/force-app/main/default/objects/amc__Time_Log__c/listViews/amc__Time_Logs_Requiring_My_Approval.listView-meta.xml
<ListView>
    <fullName>amc__Time_Logs_Requiring_My_Approval</fullName>
    <booleanFilter>(1 AND 3) OR (2 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>amc__Project_Member__c</columns>
    <columns>amc__Date__c</columns>
    <columns>amc__Hours_Completed__c</columns>
    <columns>amc__Notes__c</columns>
    <columns>amc__Role_Manager_Approver__c</columns>
    <columns>amc__Role_Manager_Approval_Status__c</columns>
    <columns>amc__Role_Manager_Rejection_Comments__c</columns>
    <columns>amc__Project_Owner_Approver__c</columns>
    <columns>amc__Project_Owner_Approval_Status__c</columns>
    <columns>amc__Project_Owner_Rejection_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>amc__Role_Manager_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>amc__Project_Owner_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>amc__Role_Manager_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>amc__Project_Owner_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Time Logs Requiring My Approval</label>
</ListView>